--- a/app/assets/stylesheets/appointments.scss
+++ b/app/assets/stylesheets/appointments.scss
@@ -20,6 +20,11 @@ body {
   padding: 10px;
 }
 
+.submit-button:disabled {
+  background: #BBBBBB;
+  cursor: not-allowed;
+}
+
 .appointment {
   padding-top: 10px;
   border-bottom: 1px solid #CCC;
