--- a/app/views/appointments/index.html.slim
+++ b/app/views/appointments/index.html.slim
@@ -1,3 +1,1 @@
-h1 React Calendar
-
-= react_component('Appointments', props: {appointments: @appointments}, prerender: true)
+= react_component('AppRouter')
